Mention ONNX and target speakers

--- a/_posts/2025-10-23-ravas.md
+++ b/_posts/2025-10-23-ravas.md
@@ -43,6 +43,7 @@ Recently, I found that the same voice conversion approach can be applied to [Mim
 This works because Mimi's internal representation is distilled from WavLM, and thus inherits the properties that make WavLM suitable for voice conversion.
 Its chunk size is of 0.08 seconds and, most importantly, it does not require future context, making it perfect for our real-time use case.
 Together with the avatar, RAVAS runs with a latency of 0.13 seconds in my Macbook Pro M1.
+Both voice anonymizers are available with several target speakers, and are compiled with ONNX for faster inference.
 
 Note that the voice anonymization is not very strong.
 As I showed with [Private kNN-VC](https://carlosfranzreb.github.io/private-knnvc.html), speakers anonymized with kNN-VC can be identified through the variation and duration of their speech, as they are not anonymized.
